fixed description issues

--- a/main.ipynb
+++ b/main.ipynb
@@ -85,6 +85,7 @@
     "        Static\n",
     "        - Imported DLL (sequence)\n",
     "        - Hash of the imported DLLs (static)\n",
+    "        - Average entropy of the PE sections (static)\n",
     "    '''\n",
     "    try:\n",
     "        for imported_dll in json_data['static']['pe_imports']:\n",
@@ -100,7 +101,7 @@
     "\n",
     "    '''\n",
     "        Signatures\n",
-    "        - Signatures names (sequence)\n",
+    "        - Number of signatures names (static)\n",
     "    '''\n",
     "    try:\n",
     "        temp_row.at[0, 'signatures_number'] = len(json_data['signatures'])\n",
@@ -109,15 +110,14 @@
     "\n",
     "    '''\n",
     "        Behavior\n",
-    "        - Files Created (sequence)\n",
-    "        - Files Written (sequence)\n",
-    "        - Regkeys Opened (sequence)\n",
-    "        - Regkeys Written (sequence)\n",
-    "        - Regkeys Read (sequence)\n",
-    "        - Generic process (sequence)\n",
+    "        - Number of Files Created (static)\n",
+    "        - Number of Files Written (static)\n",
+    "        - Number of Regkeys Opened (static)\n",
+    "        - Number of Regkeys Written (static)\n",
+    "        - Number of Regkeys Read (static)\n",
+    "        - Number of Generic process (static)\n",
     "    }\n",
     "    '''\n",
-    "    # TODO; Maybe first seen pattern?\n",
     "    try:\n",
     "        temp_row.at[0, 'generic_process_number'] = len(json_data['behavior']['generic'])\n",
     "        temp_row.at[0, 'file_created_number'] = len(json_data['behavior']['summary']['file_created'])\n",
